--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@yerkopalma/pupa": "^1.2.0",
+    "brfs": "^1.4.3",
     "domify": "^1.4.0",
     "handlebars": "^4.0.6",
     "html-minifier": "^3.3.0",
