--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "standard --verbose | snazzy",
     "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
     "build": "npm run clear && node scripts/build-html && node scripts/build-post && node scripts/build",
-    "clear": "rm -rf index.html _scripts.js views/data.js views/data-posts.js views/meta.js"
+    "clear": "rm -rf index.html _scripts.js views/data.js views/data-posts.js views/meta.js bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -42,7 +42,8 @@
     "marked": "^0.3.6",
     "meow": "^3.7.0",
     "pupa": "^1.0.0",
-    "singleton-router": "^1.2.0"
+    "singleton-router": "^1.2.0",
+    "uglifyify": "^3.0.4"
   },
   "devDependencies": {
     "browserify": "^14.0.0",
