--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": "YerkoPalma/gener",
   "scripts": {
-    "test": "standard --verbose | snazzy",
+    "test": "standard --verbose | snazzy && ava",
     "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
     "build": "npm run clear && node scripts/build-html && node scripts/build-post && node scripts/build",
     "clear": "rm -rf index.html _scripts.js views/data.js views/data-posts.js views/meta.js bundle.js"
@@ -46,6 +46,7 @@
     "uglifyify": "^3.0.4"
   },
   "devDependencies": {
+    "ava": "^0.18.2",
     "budo": "^9.4.5",
     "snazzy": "^6.0.0",
     "standard": "^8.6.0"
