--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "standard --verbose | snazzy && ava",
     "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
     "build": "npm run clear && node scripts/build-html && node scripts/build-post && node scripts/build",
-    "clear": "rm -rf index.html _scripts.js views/data.js views/data-posts.js views/meta.js bundle.js"
+    "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js views/data-posts.js views/meta.js bundle.js"
   },
   "keywords": [],
   "author": "",
