--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   },
   "repository": "YerkoPalma/gener",
   "scripts": {
-    "test": "standard --verbose | snazzy && ava",
+    "test": "standard --verbose | snazzy && nyc ava",
     "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
     "build": "npm run clear && node src/scripts/prebuild.js && node src/scripts/build-html && node src/scripts/build-post && node src/scripts/build",
-    "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js src/views/data-posts.js src/views/meta.js bundle.js"
+    "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js src/views/data-posts.js src/views/meta.js bundle.js",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov"
   },
   "keywords": [],
   "author": "",
@@ -52,6 +53,7 @@
     "budo": "^9.4.5",
     "ecstatic": "^2.1.0",
     "get-port": "^2.1.0",
+    "nyc": "^10.1.2",
     "pify": "^2.3.0",
     "snazzy": "^6.0.0",
     "standard": "^8.6.0"
