--- a/src/defaults/config.json
+++ b/src/defaults/config.json
@@ -8,5 +8,22 @@
   ],
   "scripts": [
     "script.js"
-  ]
+  ],
+  "classes": {
+    "p": "black-80 fw1 lh-copy georgia f4",
+    "blockquote": "lh-copy bl bw2 b--black-80 mh0 pl4 mv2 f4 georgia fw4 i tracked-tight black-80",
+    "h1": "f2 mb2 black-80",
+    "h2": "f3 mt2 fw1 silver black-80",
+    "h3": "f3 black-80",
+    "h4": "f3 black-80",
+    "h5": "f3 black-80",
+    "h6": "f3 black-80",
+    "code": "courier f5",
+    "hr": "light-silver mb4",
+    "ol": "fw1 lh-copy georgia f4",
+    "ul": "fw1 lh-copy georgia f4",
+    "strong": "b",
+    "codespan": "courier",
+    "link": "link underline black-80"
+  }
 }
