--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "standard --verbose | snazzy && nyc ava",
     "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
     "build": "npm run clear && node src/scripts/prebuild.js && node src/scripts/build-html && node src/scripts/build-post && node src/scripts/build",
-    "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js src/views/data-posts.js src/views/meta.js bundle.js",
+    "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js src/views/data-posts.js src/views/meta.js bundle.js test/bundle.js test/index.html",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov"
   },
   "keywords": [],
