--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": "YerkoPalma/gener",
   "scripts": {
-    "test": "standard --verbose | snazzy && nyc ava",
+    "test": "standard --verbose | snazzy && nyc ava --verbose test/unit/ test/test.js",
     "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
     "build": "npm run clear && node src/scripts/prebuild.js && node src/scripts/build-html && node src/scripts/build-post && node src/scripts/build",
     "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js src/views/data-posts.js src/views/meta.js bundle.js test/bundle.js test/index.html",
