--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Simple static site generator",
   "main": "src/index.js",
   "files": [
-    "src/scripts/build.js",
-    "src/scripts/build-html.js",
-    "src/scripts/build-post.js",
-    "src/scripts/prebuild.js",
-    "src/scripts/build-min.js",
+    "src/libs/build.js",
+    "src/libs/build-html.js",
+    "src/libs/build-post.js",
+    "src/libs/prebuild.js",
+    "src/libs/build-min.js",
     "src/libs/helpers.js",
     "src/libs/md-renderer.js",
     "src/bin.js",
