--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "repository": "YerkoPalma/gener",
   "scripts": {
     "test": "standard --verbose | snazzy && nyc ava --verbose test/unit/ test/test.js",
-    "start": "budo index.js:bundle.js --port 8080 --host 0.0.0.0",
-    "build": "npm run clear && node src/scripts/prebuild.js && node src/scripts/build-html && node src/scripts/build-post && node src/scripts/build",
+    "start": "budo bundle.js --port 8080 --host 0.0.0.0",
+    "build": "npm run clear && node src/bin.js",
     "clear": "rm -rf index.html src/defaults/_scripts.js src/views/data.js src/views/data-posts.js src/views/meta.js bundle.js test/bundle.js test/index.html",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov"
   },
