partially tested build-html file

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ava": "^0.18.2",
     "axios": "^0.15.3",
     "budo": "^9.4.5",
+    "cheerio": "^0.22.0",
     "ecstatic": "^2.1.0",
     "execa": "^0.6.0",
     "get-port": "^2.1.0",
