--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-sudo: required
 language: node_js
 node_js:
   - 'stable'
   - '5'
   - '4'
+script: "sudo $(which npm) test"
 after_success: "npm i -g codecov && npm run coverage && codecov"
