--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@yerkopalma/pupa": "^1.2.0",
     "browserify": "^14.1.0",
+    "budo": "^9.4.7",
     "domify": "^1.4.0",
     "handlebars": "^4.0.6",
     "html-minifier": "^3.3.3",
